- word wraps in filters, fixed test for bigger icons

--- a/app/javascript/stylesheets/_bootstrap-customizations.scss
+++ b/app/javascript/stylesheets/_bootstrap-customizations.scss
@@ -665,12 +665,18 @@ Card style
     strong {
       display: block;
     }
-
   }
+}
 
 
-
-
+/* -----------------------
+Filters
+-------------------------*/
+.filters {
+  label {
+    width: 85%;
+    word-wrap: break-word;
+  }
 }
 
 
